Debug github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,15 +27,17 @@ jobs:
       run: |
         aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 615299765743.dkr.ecr.ap-south-1.amazonaws.com
 
-    # Debug File Permissions
-    - name: Debug File Permissions
-      run: ls -la /app
-
-    # Build and Push Docker Image
-    - name: Build and Push Docker Image
+    # Build Docker Image and Debug
+    - name: Build and Debug Docker Image
       run: |
         IMAGE_TAG=615299765743.dkr.ecr.ap-south-1.amazonaws.com/killiansclub-server:latest
-        docker build -t $IMAGE_TAG .
+        docker build -t $IMAGE_TAG . --build-arg DEBUG=true
+        docker run --rm $IMAGE_TAG ls -la /app
+
+    # Push Docker Image
+    - name: Push Docker Image
+      run: |
+        IMAGE_TAG=615299765743.dkr.ecr.ap-south-1.amazonaws.com/killiansclub-server:latest
         docker push $IMAGE_TAG
 
     # Update EKS Deployment
